--- a/examples/python-web-app/Dockerfile
+++ b/examples/python-web-app/Dockerfile
@@ -1,18 +1,16 @@
+#base image
 FROM ubuntu
-
+#defining working directory
 WORKDIR /app
-
-COPY requirements.txt /app
-COPY devops /app
-
-RUN apt-get update && \
+#copying requirements.txt to working directory
+COPY  requirements.txt /app
+#copying source code to working directory
+COPY  devops /app
+#installing required packages to run applications
+RUN apt-get update &&\
     apt-get install -y python3 python3-pip && \
     pip install -r requirements.txt && \
     cd devops
-
 ENTRYPOINT ["python3"]
-CMD ["manage.py", "runserver", "0.0.0.0:8000"]
-
-
-
+CMD ["manage.py","runserver","0.0.0.0:8000"]
 
